Commit al master del blog post

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilo.css"/>
     </head>
     <body>
-        <h1>Aqui vamos hacer nuestro primer blog</h1>
-        <p>Nuestro primer blog</p>
+        <div id="container">
+            <div id="post">
+                <h1>Aqui vamos hacer nuestro primer blog</h1>
+                <p>Nuestro primer blog inicio donde explicaremos las cosas
+                    grandes que nos da la vida</p>
+            </div>
+        </div>
     </body>
 </html>
