--- a/Blogpost.html
+++ b/Blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Aqui vamos hacer nuestro primer blog</h1>
                 <p>Nuestro primer blog inicio donde explicaremos las cosas
