Agregado al contenido un parrafo mas

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Aqui vamos hacer nuestro primer blog</h1>
                 <p>Nuestro primer blog inicio donde explicaremos las cosas
                     grandes que nos da la vida</p>
+                <p>Los Blogs son los mejores lugares que puedas publicar
+                    informacion
+                </p>
             </div>
         </div>
     </body>
