Se modificco a blog de Maestro

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog<span id="tagline">Tu blog de confianza</span>
+                Hyperblog<span id="tagline">Tu blog de Maestro</span>
             </div>
             <div id="post">
                 <h1>Aqui vamos hacer nuestro primer blog</h1>
@@ -15,6 +15,7 @@
                 <p>Los Blogs son los mejores lugares que puedas publicar
                     informacion
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
